// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerificationCode render correctly with small size 1`] = `
<DocumentFragment>
  .css-ivnnej-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d9dadd;
  color: #3f4250;
  font-size: 12px;
  font-weight: 400;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 24px;
  height: 32px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.css-ivnnej-StyledInput-VerificationCode:hover,
.css-ivnnej-StyledInput-VerificationCode:focus {
  border-color: #792dd4;
}

.css-ivnnej-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-ivnnej-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.css-ivnnej-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #727683;
}

.css-ivnnej-StyledInput-VerificationCode::-moz-placeholder {
  color: #727683;
}

.css-ivnnej-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #727683;
}

.css-ivnnej-StyledInput-VerificationCode::placeholder {
  color: #727683;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="css-ivnnej-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="0"
      id=":ra:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="css-ivnnej-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="1"
      id=":ra:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="css-ivnnej-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="2"
      id=":ra:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="css-ivnnej-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="3"
      id=":ra:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode renders correctly with default values 1`] = `
<DocumentFragment>
  .css-mss1u0-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d9dadd;
  color: #3f4250;
  font-size: 16px;
  font-weight: 400;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 40px;
  height: 48px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.css-mss1u0-StyledInput-VerificationCode:hover,
.css-mss1u0-StyledInput-VerificationCode:focus {
  border-color: #792dd4;
}

.css-mss1u0-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-mss1u0-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.css-mss1u0-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode::-moz-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode::placeholder {
  color: #727683;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="0"
      id=":r0:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="1"
      id=":r0:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="2"
      id=":r0:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="3"
      id=":r0:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode renders correctly with initial value and placeholder and 6 fields 1`] = `
<DocumentFragment>
  .css-mss1u0-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d9dadd;
  color: #3f4250;
  font-size: 16px;
  font-weight: 400;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 40px;
  height: 48px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.css-mss1u0-StyledInput-VerificationCode:hover,
.css-mss1u0-StyledInput-VerificationCode:focus {
  border-color: #792dd4;
}

.css-mss1u0-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-mss1u0-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.css-mss1u0-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode::-moz-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode::placeholder {
  color: #727683;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="0"
      id=":r1:-0"
      pattern="[0-9]*"
      placeholder="0"
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="1"
      id=":r1:-1"
      pattern="[0-9]*"
      placeholder="0"
      type="tel"
      value="3"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="2"
      id=":r1:-2"
      pattern="[0-9]*"
      placeholder="3"
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="3"
      id=":r1:-3"
      pattern="[0-9]*"
      placeholder="7"
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 4"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="4"
      id=":r1:-4"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 5"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="5"
      id=":r1:-5"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle and replace non number with "" when type is number 1`] = `
<DocumentFragment>
  .css-mss1u0-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d9dadd;
  color: #3f4250;
  font-size: 16px;
  font-weight: 400;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 40px;
  height: 48px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.css-mss1u0-StyledInput-VerificationCode:hover,
.css-mss1u0-StyledInput-VerificationCode:focus {
  border-color: #792dd4;
}

.css-mss1u0-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-mss1u0-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.css-mss1u0-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode::-moz-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode::placeholder {
  color: #727683;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="0"
      id=":r4:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="1"
      id=":r4:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="2"
      id=":r4:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="3"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="3"
      id=":r4:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="4"
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle error 1`] = `
<DocumentFragment>
  .css-nx9uyl-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #b3144d;
  color: #b3144d;
  font-size: 16px;
  font-weight: 400;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 40px;
  height: 48px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.css-nx9uyl-StyledInput-VerificationCode:hover,
.css-nx9uyl-StyledInput-VerificationCode:focus {
  border-color: #92103f;
}

.css-nx9uyl-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.css-nx9uyl-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.css-nx9uyl-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #727683;
}

.css-nx9uyl-StyledInput-VerificationCode::-moz-placeholder {
  color: #727683;
}

.css-nx9uyl-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #727683;
}

.css-nx9uyl-StyledInput-VerificationCode::placeholder {
  color: #727683;
}

<div>
    <input
      aria-invalid="true"
      aria-label="Verification code 0"
      class="css-nx9uyl-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="0"
      id=":r9:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="true"
      aria-label="Verification code 1"
      class="css-nx9uyl-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="1"
      id=":r9:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="true"
      aria-label="Verification code 2"
      class="css-nx9uyl-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="2"
      id=":r9:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="true"
      aria-label="Verification code 3"
      class="css-nx9uyl-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="3"
      id=":r9:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle keyDown and special key cases and focus/change events 1`] = `
<DocumentFragment>
  .css-mss1u0-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d9dadd;
  color: #3f4250;
  font-size: 16px;
  font-weight: 400;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 40px;
  height: 48px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.css-mss1u0-StyledInput-VerificationCode:hover,
.css-mss1u0-StyledInput-VerificationCode:focus {
  border-color: #792dd4;
}

.css-mss1u0-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-mss1u0-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.css-mss1u0-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode::-moz-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode::placeholder {
  color: #727683;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="0"
      id=":r2:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="1"
      id=":r2:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="2"
      id=":r2:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="3"
      id=":r2:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle paste when type is not number 1`] = `
<DocumentFragment>
  .css-mss1u0-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d9dadd;
  color: #3f4250;
  font-size: 16px;
  font-weight: 400;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 40px;
  height: 48px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.css-mss1u0-StyledInput-VerificationCode:hover,
.css-mss1u0-StyledInput-VerificationCode:focus {
  border-color: #792dd4;
}

.css-mss1u0-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-mss1u0-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.css-mss1u0-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode::-moz-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode::placeholder {
  color: #727683;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="0"
      id=":r7:-0"
      placeholder=""
      type="text"
      value="1"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="1"
      id=":r7:-1"
      placeholder=""
      type="text"
      value="h"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="2"
      id=":r7:-2"
      placeholder=""
      type="text"
      value="2"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="3"
      id=":r7:-3"
      placeholder=""
      type="text"
      value="3"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 4"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="4"
      id=":r7:-4"
      placeholder=""
      type="text"
      value="a"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 5"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="5"
      id=":r7:-5"
      placeholder=""
      type="text"
      value="*"
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle paste with no overflowing values 1`] = `
<DocumentFragment>
  .css-mss1u0-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d9dadd;
  color: #3f4250;
  font-size: 16px;
  font-weight: 400;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 40px;
  height: 48px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.css-mss1u0-StyledInput-VerificationCode:hover,
.css-mss1u0-StyledInput-VerificationCode:focus {
  border-color: #792dd4;
}

.css-mss1u0-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-mss1u0-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.css-mss1u0-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode::-moz-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode::placeholder {
  color: #727683;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="0"
      id=":r3:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="1"
      id=":r3:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="2"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="2"
      id=":r3:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="3"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="3"
      id=":r3:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="4"
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle paste with overflowing values 1`] = `
<DocumentFragment>
  .css-mss1u0-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d9dadd;
  color: #3f4250;
  font-size: 16px;
  font-weight: 400;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 40px;
  height: 48px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.css-mss1u0-StyledInput-VerificationCode:hover,
.css-mss1u0-StyledInput-VerificationCode:focus {
  border-color: #792dd4;
}

.css-mss1u0-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-mss1u0-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.css-mss1u0-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode::-moz-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode::placeholder {
  color: #727683;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="0"
      id=":r5:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="1"
      id=":r5:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="2"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="2"
      id=":r5:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="3"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="3"
      id=":r5:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="4"
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should handle paste with overflowing values at different index than 0 1`] = `
<DocumentFragment>
  .css-mss1u0-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d9dadd;
  color: #3f4250;
  font-size: 16px;
  font-weight: 400;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 40px;
  height: 48px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
}

.css-mss1u0-StyledInput-VerificationCode:hover,
.css-mss1u0-StyledInput-VerificationCode:focus {
  border-color: #792dd4;
}

.css-mss1u0-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-mss1u0-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.css-mss1u0-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode::-moz-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #727683;
}

.css-mss1u0-StyledInput-VerificationCode::placeholder {
  color: #727683;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="0"
      id=":r6:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="1"
      id=":r6:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="1"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="2"
      id=":r6:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="2"
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="css-mss1u0-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="3"
      id=":r6:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value="3"
    />
  </div>
</DocumentFragment>
`;

exports[`VerificationCode should render correctly disabled true 1`] = `
<DocumentFragment>
  .css-1q1kaee-StyledInput-VerificationCode {
  background: #ffffff;
  border: solid 1px #d9dadd;
  color: #3f4250;
  font-size: 16px;
  font-weight: 400;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 40px;
  height: 48px;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  cursor: default;
  background-color: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.css-1q1kaee-StyledInput-VerificationCode:hover,
.css-1q1kaee-StyledInput-VerificationCode:focus {
  border-color: #792dd4;
}

.css-1q1kaee-StyledInput-VerificationCode:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-1q1kaee-StyledInput-VerificationCode:last-child {
  margin-right: 0;
}

.css-1q1kaee-StyledInput-VerificationCode::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-1q1kaee-StyledInput-VerificationCode::-moz-placeholder {
  color: #b5b7bd;
}

.css-1q1kaee-StyledInput-VerificationCode:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-1q1kaee-StyledInput-VerificationCode::placeholder {
  color: #b5b7bd;
}

.css-1q1kaee-StyledInput-VerificationCode:hover {
  border: #e9eaeb;
}

<div>
    <input
      aria-invalid="false"
      aria-label="Verification code 0"
      class="css-1q1kaee-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="0"
      disabled=""
      id=":rb:-0"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 1"
      class="css-1q1kaee-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="1"
      disabled=""
      id=":rb:-1"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 2"
      class="css-1q1kaee-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="2"
      disabled=""
      id=":rb:-2"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
    <input
      aria-invalid="false"
      aria-label="Verification code 3"
      class="css-1q1kaee-StyledInput-VerificationCode e1a2bx9q0"
      data-testid="3"
      disabled=""
      id=":rb:-3"
      pattern="[0-9]*"
      placeholder=""
      type="tel"
      value=""
    />
  </div>
</DocumentFragment>
`;
